# quant-research-platform

./: .gitignore  LICENSE  README.md  requirements.txt
haskell/: Main.hs  nsisonglabs-quant-validator.cabal  package.yaml
python/: main.py
python/strategies/: sma_crossover.py
typescript/: package-lock.json  package.json
typescript/src/components/: PortfolioMetrics.tsx  TradeChart.tsx  TradeTable.tsx
typescript/src/pages/: index.tsx
typescript/src/pages/api/: trades.ts
