cabal-version:      3.0
name:               nsisonglabs-quant-validator
version:            0.1.0.0
description:        Trade validation system for Quant Research Platform
author:             Isaac Emmanuel
maintainer:         ei@nsisong.com
copyright:          2025
license:            MIT
build-type:         Simple
extra-source-files: README.md

executable validator
  main-is:            Main.hs
  build-depends:      base >=4.7 && <5,
                      cassava >=0.5.2.0,
                      bytestring >=0.10.8.2,
                      vector >=0.12.0.1,
                      time >=1.8.0.2
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -O2
